--- a/styles/styles.css
+++ b/styles/styles.css
@@ -25,8 +25,6 @@
 
 
 
-
-
 :root {
 
     --color-background: #E7F1E4;
@@ -242,10 +240,11 @@ li {
     margin: 0;
 }
 
+/* 
 .avatar {
-    border-radius: 50%;
-    filter: grayscale(100%) brightness(150%) opacity(80%);
-}
+    border-radius: 50%; */
+    /* filter: grayscale(100%) brightness(150%) opacity(80%);
+} */
 
 .list-start {
     font-weight: 600;
